# python-TM

./: .dockerignore  .env.template  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  demo_api.py  dockerfile  pyproject.toml  quick_test.sh  requirements.txt  sample_tasks.json
.github/workflows/: ci-cd.yml
docs/: PHASE2_DATABASE_SECURITY.md  PHASE3_REST_API.md  PHASE4_TESTING_CI_CD.md
task_manager_pro/: cli.py  send_reminders.py
task_manager_pro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
task_manager_pro/api/: __init__.py  dependencies.py  main.py
task_manager_pro/api/routes/: __init__.py  auth.py  tasks.py  users.py
task_manager_pro/models/: task.py  user.py
task_manager_pro/schemas/: __init__.py  task.py  user.py
task_manager_pro/services/: task_manager.py
task_manager_pro/storage/: database.py  interface.py  json_storage.py  models.py  sql_storage.py
task_manager_pro/utils/: decorators.py  emailer.py  logger_context.py  migration.py  security.py  session.py
tests/: test_api.py  test_email.py  test_tasks.py  test_users.py
