# 📦 Project Metadata
[project]
name = "task-manager-pro"  # Name of the package
version = "0.3.0"  # Updated version with REST API
description = "Advanced task manager with REST API, database, security, and email reminders"  # Short project summary
authors = [{ name = "Satvik Praveen" }]  # List of authors
readme = "README.md"  # Markdown file used as long description on PyPI
requires-python = ">=3.10"  # Minimum required Python version

# 📚 Dependencies required to run the project
dependencies = [
    "python-dotenv",  # For loading environment variables from .env
    "typing-extensions",  # For backward-compatible typing features
    "pydantic",  # Data validation using type hints
    "pydantic-settings",  # Pydantic settings management
    "rich",  # For pretty-printing and enhanced terminal outputs
    "sqlalchemy",  # SQL toolkit and ORM
    "alembic",  # Database migration tool
    "bcrypt",  # Password hashing library
    "pyjwt",  # JSON Web Token library
    "fastapi",  # Modern web framework for REST API
    "uvicorn[standard]",  # ASGI server for FastAPI
    "pytest",  # Testing framework
    "pytest-cov",  # Coverage reporting for pytest
    "httpx",  # HTTP client for testing
]

# 🚀 CLI entry point definition
[project.scripts]
task-manager = "task_manager_pro.cli:main"  # Allows running `task-manager` from terminal

# 🔧 Build system configuration (PEP 517)
[build-system]
requires = ["setuptools>=61.0"]  # Build tool requirement
build-backend = "setuptools.build_meta"  # Backend to build the project

# 📁 Tells setuptools where to find the source code
[tool.setuptools]
packages = ["task_manager_pro"]  # Main package directory to include